Bug 294490 - 'Slide back' effect should react on stacking order changes
Summary: 'Slide back' effect should react on stacking order changes
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 4.8.0
Platform: Slackware Linux
: NOR normal
Target Milestone: 4.11
Assignee: Thomas Lübking
URL:
Keywords:
: 305242 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-02-20 11:49 UTC by Heinz Wiesinger
Modified: 2013-02-18 21:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heinz Wiesinger 2012-02-20 11:49:20 UTC
Version:           4.8.0 (using KDE 4.8.0) 
OS:                Linux

The 'slide back' effect works fine for me when I focus windows by selecting entries in the taskmanager widget. But if I change focus of a window by clicking on it with the mouse cursor the effect is not triggered.

Reproducible: Always

Steps to Reproduce:
Enable the slide-back effect in systemsettings. Place two windows so they partially overlap and change focus between them.

Actual Results:  
Windows behave as though the effect was not activated.

Expected Results:  
Changing focus (from anywhere) should trigger the slide back effect.
Comment 1 Martin Flöser 2012-02-20 12:00:01 UTC
works fine here...

what's your focus policy?
Comment 2 Heinz Wiesinger 2012-02-20 12:57:31 UTC
I'm using:

Policy: Focus Follows Mouse
Focus stealing prevention level: Low
[x] Click raises active window
[ ] Separate screen focus
[x] Active screen follows mouse

I have a dual screen setup. Don't know if that might have anything to do with it.
Comment 3 Thomas Lübking 2012-02-20 15:52:11 UTC
No, it's because of the focus / stackorder change gap.
Ie. using autoraise w/ 0ms delay would work.
Comment 4 Martin Flöser 2013-01-18 19:37:51 UTC
For 4.11 we should update the effect to use the new stacking order changed signal instead of the active window changed signal. It has always been a hack that it operated on active changed.
Comment 5 Martin Flöser 2013-01-30 08:15:16 UTC
*** Bug 305242 has been marked as a duplicate of this bug. ***
Comment 6 Thomas Lübking 2013-02-18 21:48:19 UTC
Git commit 4f77dbf90185bf2683a5b19da7d1b8b35c012520 by Thomas Lübking.
Committed on 30/01/2013 at 21:50.
Pushed by luebking into branch 'master'.

re-settle slideBack effect to stackingOrderChanged
FIXED-IN: 4.11

M  +44   -76   kwin/effects/slideback/slideback.cpp
M  +5    -7    kwin/effects/slideback/slideback.h

http://commits.kde.org/kde-workspace/4f77dbf90185bf2683a5b19da7d1b8b35c012520