re-settle slideBack effect to stackingOrderChanged

BUG: 294490
FIXED-IN: 4.11